# ffmpeg_toolkit

./: ARCHITECTURE.md  CHANGELOG.md  LICENSE  MANIFEST.in  MOTION_DETECTION_FIX.md  MOTION_FIX_SUMMARY.md  PORTING_GUIDE.md  README.MD  __init__.py  ffmpeg_converter.py  ffmpeg_converter_with_module.py  ffmpeg_help.md  ffmpeg_toolkit.py  ffmpeg_types.py  pyproject.toml  requirements.txt  setup.py  test.py  test_motion_semantics.py  types.py
.github/workflows/: publish.yml
.serena/: project.yml
src/: archived.py  ffmpeg_toolkit.py
src/ffmpeg_toolkit/: __init__.py  ffmpeg_toolkit.py  ffmpeg_toolkit_core.py  ffmpeg_types.py
test/: conftest.py  test.py  test_ffmpeg_toolkit.py
